--- a/index.html
+++ b/index.html
@@ -98,22 +98,17 @@
     <div class="btn-container">
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">施工組</p>
-            <a href="https://docs.google.com/spreadsheets/d/1cFh5zbm7qRwwqE9uGD0G3NdVLMhaSO5DgWd1y687wwo/edit?gid=0#gid=0" class="btn">施工每日日報</a>
-            <a href="https://docs.google.com/spreadsheets/d/1BxXg5jEgVMVnT5uBZGIEUoEs7GHX90Aent1j9mCZWD8/edit?gid=0#gid=0" class="btn"><編碼>施工自主查驗</a>
-            <a href="https://docs.google.com/spreadsheets/d/1JaZEKyh_M6bWk_I3p-jWH1cL6htITDyfzwwzSb3mbcc/edit?gid=442371140#gid=442371140" class="btn">混凝土澆置統計</a>
-            <a href="https://docs.google.com/spreadsheets/d/1LtNOr7zsmdIlIMaf4jUn77W6LCdlxh3rcCXPcvXafkw/edit?gid=0#gid=0" class="btn">缺失改善紀錄</a>
-            <a href="https://docs.google.com/spreadsheets/d/1QP7HbrNo5MCdGsvQsY1hUy2ufkkg3hwsgfDL917FkBo/edit?gid=0#gid=0" class="btn">施工進度取線圖</a>
-            <a href="https://docs.google.com/spreadsheets/d/1N1pH0JsXPeAJ4u7uWf2GrkiDlnYBuXcsDPe2ubIqAGQ/edit?resourcekey=&gid=193692739#gid=193692739" class="btn">每日施工回報表</a>
-            <a href="https://forms.gle/TYd2EZavsdamusm68" class="btn"><表單>每日進場人數回報</a>
-            <a href="https://forms.gle/HuTst3qd78uidRfB8" class="btn"><表單>每日施工回報</a>
+            <a href="" class="btn">施工每日日報</a>
+            <a href="https://docs.google.com/spreadsheets/d/1UO76Xpi5zS2EOigz89actzQ_SCie9bdMReREMV3nRRw/edit?gid=1584446597#gid=1584446597" class="btn"><編碼>施工自主查驗</a>
+            <a href="" class="btn">混凝土澆置統計尚未啟用</a>
+            <a href="https://docs.google.com/spreadsheets/d/19vZRboj3Lx1UO82C8q0zfKsalUvXufTdQGP2RGOOSiU/edit?gid=1118906643#gid=1118906643" class="btn">缺失改善紀錄</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">品管組</p>
             <a href="https://docs.google.com/spreadsheets/d/13dLwyMfSB_O8V2oHDqnUeV__RnNFalBGPllYWnyXaPw/edit?gid=0#gid=0" class="btn">混凝土澆置時間紀錄</a>
-            <a href="https://docs.google.com/spreadsheets/d/1ymHlbXo8yzJ8XCd9djMdBSwjwIqwsGdUfdDd4OE8nio/edit?gid=281744822#gid=281744822" class="btn">收/發文紀錄</a>
+            <a href="https://docs.google.com/spreadsheets/d/1FuAOofR5M-r6sG0DDmJZZmkUMLwy5KL83-FDs6LeZZA/edit?gid=1885004931#gid=1885004931" class="btn">收/發文紀錄</a>
             <a href="https://docs.google.com/spreadsheets/d/13Zf7l9bKjapzaQGxyRAc-qeVmdWNmFhGxPd2ziPnEJw/edit?gid=0#gid=0" class="btn">工程相關人員督導紀錄</a>
-            <a href="https://docs.google.com/spreadsheets/d/1i1TBepz7SEm0KRRCbRYntfTcCA7ZKUgRRwDaWJ1nMqU/edit?gid=1342178985#gid=1342178985" class="btn"><編碼>品管/計畫書/缺失改善</a>
-            <a href="https://docs.google.com/spreadsheets/d/1MK7jePCQ2Yjm26yTVvdctfMCOfXwiGLiSxy-LPc3ERc/edit?gid=1616629558#gid=1616629558" class="btn">材料設備統計表/申請單</a>
+            <a href="https://docs.google.com/spreadsheets/d/1q7eGUMdTMOefFgkVl2DPH-JU__KyHs_unrqE3qvVHVc/edit?gid=1229964546#gid=1229964546" class="btn">材料設備統計表/申請單</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">職安組</p>
@@ -123,13 +118,6 @@
         </div>
     </div>
     <div class="btn-container">
-        <div class="btn-group">
-            <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">高軟</p>
-            <a href="https://docs.google.com/spreadsheets/d/1UO76Xpi5zS2EOigz89actzQ_SCie9bdMReREMV3nRRw/edit?gid=1584446597#gid=1584446597" class="btn">施工自主查驗</a>
-            <a href="https://docs.google.com/spreadsheets/d/1q7eGUMdTMOefFgkVl2DPH-JU__KyHs_unrqE3qvVHVc/edit?gid=1229964546#gid=1229964546" class="btn">材料設備統計表</a>
-            <a href="" class="btn">尚未啟用</a>
-            <a href="" class="btn">尚未啟用</a>
-        </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">行政組</p>
             <a href="https://docs.google.com/spreadsheets/d/1DZa-5tN-KdqLg9TXe-YYKJ-qjJl5MB5bF_MU0RCj_iY/edit?gid=0#gid=0" class="btn">亞灣通訊錄</a>
@@ -145,12 +133,6 @@
             <a href="" class="btn">尚未啟用</a>
         </div>
     </div>
-    <div class="btn-container">
-        <div class="btn-group">
-            <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">稽核中心</p>
-            <a href="https://docs.google.com/spreadsheets/d/1_T6hKMMjg4Y48WFV72Sb3GUmeIsZKUHnMUmSbOepdSc/edit?gid=0#gid=0" class="btn">計價分層數量</a>
-        </div>
-    </div>
 
     <script>
         function updateCountdown() {
@@ -160,7 +142,7 @@
             const timeDiff = targetDate - now;
 
             if (timeDiff <= 0) {
-                document.getElementById('countdown').innerHTML = '倒计时结束';
+                document.getElementById('countdown').innerHTML = '時間到';
                 return;
             }
 
@@ -176,10 +158,10 @@
                 seconds + '秒 ';
         }
 
-        // 更新倒计时
+        // 更新倒時間
         setInterval(updateCountdown, 1000);
 
-        // 初始化倒计时显示
+        // 顯示
         updateCountdown();
     </script>
 </body>
