--- a/index.html
+++ b/index.html
@@ -100,37 +100,24 @@
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">施工組</p>
             <a href="" class="btn">施工每日日報</a>
             <a href="https://docs.google.com/spreadsheets/d/1UO76Xpi5zS2EOigz89actzQ_SCie9bdMReREMV3nRRw/edit?gid=1584446597#gid=1584446597" class="btn"><編碼>施工自主查驗</a>
-            <a href="" class="btn">混凝土澆置統計尚未啟用</a>
             <a href="https://docs.google.com/spreadsheets/d/19vZRboj3Lx1UO82C8q0zfKsalUvXufTdQGP2RGOOSiU/edit?gid=1118906643#gid=1118906643" class="btn">缺失改善紀錄</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">品管組</p>
-            <a href="https://docs.google.com/spreadsheets/d/13dLwyMfSB_O8V2oHDqnUeV__RnNFalBGPllYWnyXaPw/edit?gid=0#gid=0" class="btn">混凝土澆置時間紀錄</a>
             <a href="https://docs.google.com/spreadsheets/d/1FuAOofR5M-r6sG0DDmJZZmkUMLwy5KL83-FDs6LeZZA/edit?gid=1885004931#gid=1885004931" class="btn">收/發文紀錄</a>
-            <a href="https://docs.google.com/spreadsheets/d/13Zf7l9bKjapzaQGxyRAc-qeVmdWNmFhGxPd2ziPnEJw/edit?gid=0#gid=0" class="btn">工程相關人員督導紀錄</a>
             <a href="https://docs.google.com/spreadsheets/d/1q7eGUMdTMOefFgkVl2DPH-JU__KyHs_unrqE3qvVHVc/edit?gid=1229964546#gid=1229964546" class="btn">材料設備統計表/申請單</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">職安組</p>
-            <a href="" class="btn">缺失紀錄</a>
-            <a href="" class="btn">ISO 45001表單</a>
-            <a href="https://docs.google.com/spreadsheets/d/1R6nfyJufNR6Kd7mZMwF-CZzbIkTqbShPY5KV3ZDxJAA/edit?gid=0#gid=0" class="btn">統計分析</a>
+            <a href="" class="btn">缺失紀錄尚未啟用</a>
+            <a href="" class="btn">ISO 45001表單尚未啟用</a>
+            <a href="https://docs.google.com/spreadsheets/d/1R6nfyJufNR6Kd7mZMwF-CZzbIkTqbShPY5KV3ZDxJAA/edit?gid=0#gid=0" class="btn">統計分析尚未啟用</a>
         </div>
     </div>
     <div class="btn-container">
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">行政組</p>
-            <a href="https://docs.google.com/spreadsheets/d/1DZa-5tN-KdqLg9TXe-YYKJ-qjJl5MB5bF_MU0RCj_iY/edit?gid=0#gid=0" class="btn">亞灣通訊錄</a>
-            <a href="" class="btn">尚未啟用</a>
-            <a href="" class="btn">尚未啟用</a>
-            <a href="" class="btn">尚未啟用</a>
-        </div>
-        <div class="btn-group">
-            <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">環安中心</p>
-            <a href="" class="btn">尚未啟用</a>
-            <a href="" class="btn">尚未啟用</a>
-            <a href="" class="btn">尚未啟用</a>
-            <a href="" class="btn">尚未啟用</a>
+            <a href="" class="btn">高軟通訊錄尚未啟用</a>
         </div>
     </div>
 
