--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              background-repeat: no-repeat; /* 禁止背景圖片重複 */
              background-attachment: fixed; /* 設置背景圖片固定滾動 */
              font-family: Arial, sans-serif; /* 設置字體 */
-             color: #a6cfaf; /* 設置文字顏色為白色 */
+             color: #ffffff; /* 設置文字顏色為白色 */
              text-align: center; /* 將文字居中 */
              padding-top: 50px; /* 留出一些上邊距 */
              margin: 0; /* 去除默認的頁面邊距 */
@@ -71,7 +71,7 @@
 
     <style>
         body {
-            background-color: #ffffff; /* 背景顏色 */
+            background-color: #c4eec0; /* 背景顏色 */
             font-family: Arial, sans-serif; /* 字體設置 */
         }
 
