--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <style>
         body {
-            background-color: #c4eec0; /* 背景顏色 */
+            background-color: #d7e0d1; /* 背景顏色 */
             font-family: Arial, sans-serif; /* 字體設置 */
         }
 
