--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="btn-container">
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">施工組</p>
-            <a href="" class="btn">施工每日日報</a>
+            <a href="https://docs.google.com/spreadsheets/d/1oXqxlViQ19xcpe2jOf0GiS54Pg56eE3bQG7PeZ93-sI/edit?gid=1634128492#gid=1634128492" class="btn">施工每日日報</a>
             <a href="https://docs.google.com/spreadsheets/d/1UO76Xpi5zS2EOigz89actzQ_SCie9bdMReREMV3nRRw/edit?gid=1584446597#gid=1584446597" class="btn"><編碼>施工自主查驗</a>
             <a href="https://docs.google.com/spreadsheets/d/19vZRboj3Lx1UO82C8q0zfKsalUvXufTdQGP2RGOOSiU/edit?gid=1118906643#gid=1118906643" class="btn">缺失改善紀錄</a>
         </div>
