--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
             <a href="https://docs.google.com/spreadsheets/d/1oXqxlViQ19xcpe2jOf0GiS54Pg56eE3bQG7PeZ93-sI/edit?gid=1634128492#gid=1634128492" class="btn">施工每日日報</a>
             <a href="https://docs.google.com/spreadsheets/d/1UO76Xpi5zS2EOigz89actzQ_SCie9bdMReREMV3nRRw/edit?gid=1584446597#gid=1584446597" class="btn"><編碼>施工自主查驗</a>
             <a href="https://docs.google.com/spreadsheets/d/19vZRboj3Lx1UO82C8q0zfKsalUvXufTdQGP2RGOOSiU/edit?gid=1118906643#gid=1118906643" class="btn">缺失改善紀錄</a>
+            <a href="https://docs.google.com/spreadsheets/d/1fXtj5LMPluCYlgoGRMB_5oIUWspjTzaJ__AgaqybR5w/edit?gid=430026283#gid=430026283" class="btn">每日施工人員進場紀錄</a>
+            <a href="https://docs.google.com/forms/d/1VEWQ4QDLsNk217gx1qYleAMsP-X-NzCfzNCqnGSHqbA/edit?pli=1#responses" class="btn">每日施工人員進場回報</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">品管組</p>
