--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <a href="https://docs.google.com/spreadsheets/d/19vZRboj3Lx1UO82C8q0zfKsalUvXufTdQGP2RGOOSiU/edit?gid=1118906643#gid=1118906643" class="btn">缺失改善紀錄</a>
             <a href="https://docs.google.com/spreadsheets/d/1fXtj5LMPluCYlgoGRMB_5oIUWspjTzaJ__AgaqybR5w/edit?gid=430026283#gid=430026283" class="btn">每日施工人員進場紀錄</a>
             <a href="https://docs.google.com/forms/d/1VEWQ4QDLsNk217gx1qYleAMsP-X-NzCfzNCqnGSHqbA/edit?pli=1#responses" class="btn">每日施工人員進場回報</a>
+            <a href="https://docs.google.com/forms/d/1PynFr-wjluyrJGoJOlAduNek1lBDa2G1KWdmp33TD0o/edit" class="btn">每日施工日報</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">品管組</p>
