--- a/index.html
+++ b/index.html
@@ -98,17 +98,18 @@
     <div class="btn-container">
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">施工組</p>
-            <a href="https://docs.google.com/spreadsheets/d/1oXqxlViQ19xcpe2jOf0GiS54Pg56eE3bQG7PeZ93-sI/edit?gid=1634128492#gid=1634128492" class="btn">施工每日日報</a>
-            <a href="https://docs.google.com/spreadsheets/d/1UO76Xpi5zS2EOigz89actzQ_SCie9bdMReREMV3nRRw/edit?gid=1584446597#gid=1584446597" class="btn"><編碼>施工自主查驗</a>
-            <a href="https://docs.google.com/spreadsheets/d/19vZRboj3Lx1UO82C8q0zfKsalUvXufTdQGP2RGOOSiU/edit?gid=1118906643#gid=1118906643" class="btn">缺失改善紀錄</a>
+            <a href="https://docs.google.com/spreadsheets/d/1-O-6FmQIGbPdZjiRbH4PV7yBIPKGGFGcRhJSDX5eGAc/edit?gid=1822429114#gid=1822429114" class="btn">施工每日日報</a>
+            <a href="https://docs.google.com/spreadsheets/d/1tM1eLEHUWxzR1Ic1VWtBrpOlJF7pxanU7eD31hWScDY/edit?gid=2089751566#gid=2089751566" class="btn"><編碼>施工自主查驗</a>
+            <a href="https://docs.google.com/spreadsheets/d/1onk-ytfOWAkLFA71OUKa5r9dz6pba_awKMHxCpuvByU/edit?gid=137676570#gid=137676570" class="btn">缺失改善紀錄</a>
             <a href="https://docs.google.com/spreadsheets/d/1fXtj5LMPluCYlgoGRMB_5oIUWspjTzaJ__AgaqybR5w/edit?gid=430026283#gid=430026283" class="btn">每日施工人員進場紀錄</a>
             <a href="https://docs.google.com/forms/d/1VEWQ4QDLsNk217gx1qYleAMsP-X-NzCfzNCqnGSHqbA/edit?pli=1#responses" class="btn">每日施工人員進場回報</a>
-            <a href="https://docs.google.com/forms/d/1PynFr-wjluyrJGoJOlAduNek1lBDa2G1KWdmp33TD0o/edit" class="btn">每日施工日報</a>
+            <a href="https://docs.google.com/spreadsheets/d/1aN_A1N9frPyy2VIVnYzkwCVTxTaDN-_9AQ7bXljQt6c/edit?gid=154950725#gid=154950725" class="btn">機關施工日報</a>
+            <a href="https://docs.google.com/spreadsheets/d/1uZnS-TojjpnZ5UwrD7x3IsA7pCU61MDSq1P9n8hUPbU/edit?gid=2120618208#gid=2120618208" class="btn">S-CURVE 進度網圖</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">品管組</p>
-            <a href="https://docs.google.com/spreadsheets/d/1FuAOofR5M-r6sG0DDmJZZmkUMLwy5KL83-FDs6LeZZA/edit?gid=1885004931#gid=1885004931" class="btn">收/發文紀錄</a>
-            <a href="https://docs.google.com/spreadsheets/d/1q7eGUMdTMOefFgkVl2DPH-JU__KyHs_unrqE3qvVHVc/edit?gid=1229964546#gid=1229964546" class="btn">材料設備統計表/申請單</a>
+            <a href="https://docs.google.com/spreadsheets/d/1Idaq9LzNpqvjtNHYFy3VhMkJT0hc54f5Tsrz9tcQ-qk/edit?gid=1653626117#gid=1653626117" class="btn">收/發文紀錄</a>
+            <a href="https://docs.google.com/spreadsheets/d/1qk7nS5oew8998r2YEz2tyCWktN2P5iKSinhuJ1htK14/edit?gid=112051770#gid=112051770" class="btn">材料設備統計表/申請單</a>
         </div>
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">職安組</p>
@@ -120,7 +121,7 @@
     <div class="btn-container">
         <div class="btn-group">
             <p style="color: #ffffff; font-size: 18px; margin-bottom: 10px;">行政組</p>
-            <a href="" class="btn">高軟通訊錄尚未啟用</a>
+            <a href="https://docs.google.com/spreadsheets/d/1ULkxRQ4CueuXu4qN5CCxp4EZF-PhNDjFhS1JeSA7ivY/edit?gid=806572546#gid=806572546" class="btn">高軟通訊錄尚未啟用</a>
         </div>
     </div>
 
